# single-view-3d

./: .gitignore  Makefile  README.md  hello.py  pose.json  pyproject.toml  template_render.py
assets/: camera_calibration.json  measurements.yaml  visualization_template.html.tpl
docs/: focal_length_estimation.md  notes.md  perspective_axes_length.md  summary.md  test_decomposition.md  thesis_how_to.md
notebooks/: analysis.ipynb  analyze_results.ipynb  autocalibration_v1.ipynb  autocalibration_v2.ipynb  calibration.ipynb  comparison.ipynb  comparison_analysis.ipynb  complete_analysis.ipynb  depth_pro_test.ipynb  distortion.ipynb  explore_scene.ipynb  measurements.ipynb  measurements_calibrated.ipynb  measurements_calibrated_v2.ipynb  measurements_v3.ipynb  pipeline.ipynb  pipeline_tests.ipynb  plot_distance_mesh.ipynb  rectification.ipynb  rendering.ipynb  rendering_v1.ipynb  rendering_v2.ipynb  rendering_v3.ipynb  rendering_v4.ipynb  template_scene.ply  test.ipynb  test_calibration.ipynb  test_calibration_v1.ipynb
notebooks/legacy/: analysis.ipynb  measurements.ipynb  measurements_calibrated_v1.ipynb  measurements_calibrated_v2.ipynb  rendering_v2.ipynb
results/: measurement_results_v1.csv  measurement_results_v2.csv  measurement_results_v3.csv
src/: calibration.py  data.py  decomposition_test.py  enums.py  geometry.py  matching.py  measurement_data.py  plotting.py  rendering.py  shapes.py  test_calibration.py  utils.py
src/configs/: analysis_data.py  render_config.py  render_data.py
src/experiments/: depth_pro.py  test_calibration.py
src/legacy/: plotting.py  shapes.py
src/models/: distance.py  measurements.py  scene.py  (+1 more)
streamlit/: Homepage.py
web/: viewer.html.tpl
(+13 files in other folders)
