[project]
name = "single-view-3d"
version = "0.1.0"
description = "Experiments for constrained 3D reconstruction from a single view of a scene"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "pyvista>=0.45.2",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
